--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm-run-all build-bin build-css",
     "build-bin": "xmake",
     "build-css": "npm-run-all build-css-main build-css-themes",
-    "build-css-themes": "node-sass --include-path vendor/src --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/default.scss",
-    "build-css-main": "node-sass --include-path vendor/src --output app/assets/stylesheets --output-style expanded src/scss/main.scss"
+    "build-css-themes": "node-sass --include-path vendor/src --include-path lcpkg/installed/source --output app/assets/stylesheets/themes --output-style expanded src/scss/themes/default.scss",
+    "build-css-main": "node-sass --include-path vendor/src --include-path lcpkg/installed/source --output app/assets/stylesheets --output-style expanded src/scss/main.scss"
   },
   "repository": {
     "type": "git",
